--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
       </div>
     </section>
 
-    <script src="/clrchanger.js"></script>
+    <script src="./clrchanger.js"></script>
   </body>
 </html>
