--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <section id="main-section" class="bg-[#87ace488] h-[100vh] w-[100%]">
       <div class="heading text-center py-24">
-        <h1 class="text-white font-extrabold underline text-2xl">
+        <h1 class="text-white font-extrabold underline text-xl md:text-2xl">
           Simple Color Changing
         </h1>
       </div>
@@ -27,7 +27,7 @@
       <div
         class="btn mx-auto w-[100%] my text-center absolute top-[50%] translate-y-[-50%]"
       >
-        <div class="border-2 border-black w-[30%] mx-auto my-4 rounded-xl">
+        <div class="border-2 border-[#122] w-[80%] mx-auto my-4 rounded-xl py-4">
           <h1 class="text-2xl font-semibold text-white">
             Background color :
             <span class="color text-blue-400 font-bold text-2xl"
@@ -36,7 +36,7 @@
           </h1>
         </div>
         <button
-          class="border-2 border-slate-900 py-px px-4 rounded-2xl"
+          class="border-2 border-slate-900 py-[2px] px-6 rounded-xl"
           id="btn"
         >
           click me
@@ -51,12 +51,12 @@
       class="hex bg-pink-500 w-[100%] h-[100vh] text-center space-y-36 py-16"
     >
       <div class="heading">
-        <h1 class="text-white font-extrabold underline text-3xl">
+        <h1 class="text-white font-extrabold underline text-xl sm:text-2xl mt-4" >
           Hex Color Changing
         </h1>
       </div>
       <div class="btn mx-auto my text-center my-auto">
-        <div class="border-2 border-black w-[30%] mx-auto my-4 rounded-xl">
+        <div class="border-2 border-black w-[80%] mx-auto my-4 rounded-xl py-4">
           <h1 class="text-2xl font-semibold text-white">
             Background color :
             <span class="hex-color text-blue-400 font-bold text-2xl"
@@ -65,7 +65,7 @@
           </h1>
         </div>
         <button
-          class="border-2 border-slate-900 py-px px-4 rounded-2xl"
+          class="border-2 border-slate-900 py-[2px] px-6 rounded-xl"
           id="hex-btn"
         >
           click me
